[package]
name = "sent-sync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rocket = "0.5.1"
rocket_ws = { package = "rocket_ws", version = "0.1.1" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

